--- a/wsgi/pn_weekly/articles/templates/articles/article-detail.html
+++ b/wsgi/pn_weekly/articles/templates/articles/article-detail.html
@@ -4,6 +4,9 @@
     <!--Hidden article id for ajax query-->
     <p hidden id="article-id">{{ article.id }}</p>
 
+        <!--Hidden user picture url-->
+    <p hidden id="user-picture-url">{{ request.user.model_pic}}</p>
+
     <!-- Page Content -->
     <div class="container">
 
@@ -66,7 +69,7 @@
                     {% for comment in comments %}
                         <div id="comment_{{ comment.id }}" class="media mb-4">
                             <img height="50" width="50" class="d-flex mr-3 rounded-circle avatar"
-                                 src="{% static 'images/user.png' %}" alt="">
+                                 src="/media/{{ comment.user.model_pic }}" alt="">
                             <div class="media-body col-md-10"><h5 class="mt-0">{{ comment.user.get_full_name }}</h5>
                                 <p>{{ comment.text }}</p>
                             </div>
