--- a/wsgi/pn_weekly/articles/templates/users/account.html
+++ b/wsgi/pn_weekly/articles/templates/users/account.html
@@ -22,7 +22,7 @@
                                                         <form action="{% url 'upload_pic' %}" method="post"
                                                               enctype="multipart/form-data" id="form-upload-image">
                                                             {% csrf_token %}
-                                                            <img src="{{ media_url }}/{{ request.user.model_pic }}"
+                                                            <img src="/{{ request.user.model_pic }}"
                                                                  width="50"
                                                                  height="50"
                                                                  class="rounded-circle avatar"
