--- a/wsgi/pn_weekly/articles/templates/articles/article-detail.html
+++ b/wsgi/pn_weekly/articles/templates/articles/article-detail.html
@@ -69,7 +69,7 @@
                     {% for comment in comments %}
                         <div id="comment_{{ comment.id }}" class="media mb-4">
                             <img height="50" width="50" class="d-flex mr-3 rounded-circle avatar"
-                                 src="/{{ comment.user.model_pic }}" alt="">
+                                 src="{% static image_static %}media/{{ request.user.model_pic }}" alt="">
                             <div class="media-body col-md-10"><h5 class="mt-0">{{ comment.user.get_full_name }}</h5>
                                 <p>{{ comment.text }}</p>
                             </div>
